database code push

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
- DATABASE_URL= "postgresql://postgres:123456@localhost:5432/job_db"
-# DATABASE_URL= ${{ Postgres.DATABASE_URL }}
+#  DATABASE_URL= "postgresql://postgres:123456@localhost:5432/job_db"
+DATABASE_URL=postgresql://protgres_sever_user:QPHvMsj3rtJZPH34lrgq0MiGntUUPa1S@dpg-d21lv395pdvs7383mkb0-a.singapore-postgres.render.com:5432/protgres_sever?sslmode=require
 
 # This was inserted by `prisma init`:
 [object Promise]
