--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js",
-    "start": "node src/index.js",
+    "dev": "nodemon index.js",
+    "start": "node index.js",
     "postinstall": "npx prisma generate"
   },
   "keywords": [],
@@ -17,9 +17,7 @@
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "multer": "^2.0.2",
-    "nodemon": "^3.1.10"
-  },
-  "devDependencies": {
+    "nodemon": "^3.1.10",
     "prisma": "^6.12.0"
   }
 }
