--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
-    "postinstall": "npx prisma generate"
+  "postinstall": "node node_modules/prisma/build/index.js generate"
   },
   "keywords": [],
   "author": "",
