--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "multer": "^2.0.2",
-    "nodemon": "^3.1.10",
+    "nodemon": "^3.1.10"
+  },
+  "devDependencies": {
     "prisma": "^6.12.0"
   }
 }
